--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,10 @@
 ############################
 
 # Name of website
-title: My Website
+title: DH Practicum 2023
 
 # Your name to show in the footer
-author: Some Person
+author: Vanessa Barcelos
 
 ###############################################
 # --- List of links in the navigation bar --- #
