--- a/_config.yml
+++ b/_config.yml
@@ -20,11 +20,10 @@ author: Vanessa Barcelos
 ###############################################
 
 navbar-links:
-  About Me: "aboutme"
   Resources:
     - Beautiful Jekyll: "https://beautifuljekyll.com"
     - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
+  Author's home: "https://vanessabcs.github.io/"
 
 ################
 # --- Logo --- #
@@ -49,7 +48,7 @@ round-avatar: true
 # Select the social network links that you want to show in the footer.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  email: "someone@example.com"
+  email: "vrd28@miami.edu"
   rss: true  # remove this line if you don't want to show an RSS link at the bottom
   facebook: 
   github: vanessabcs
@@ -58,11 +57,11 @@ social-network-links:
   youtube: 
 #  medium: 
 #  reddit: 
-#  linkedin: Vanessa Barcelos
+linkedin: Vanessa Barcelos
 #  xing: 
 #  stackoverflow: 
 #  snapchat: 
-#  instagram: teachervanessab
+instagram: teachervanessab
 #  spotify: 
 #  telephone: 
 #  steam: 
@@ -88,13 +87,13 @@ rss-description: This website is a virtual proof that I'm awesome
 # Select which social network share links to show in posts
 share-links-active:
   twitter: true
-  facebook: true
+  facebook: false
   linkedin: true
   vk: false
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "MyWebsite.com"
+url-pretty: "https://vanessabcs.github.io/"
 
 # Excerpt word length - Truncate the excerpt of each post on the feed page to the specified number of words
 excerpt_length: 50
