--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 ############################
 
 # Name of website
-title: DH Practicum 2023
+title: Vanessa Barcelos
 
 # Your name to show in the footer
 author: Vanessa Barcelos
