--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ navbar-links:
   Projects:
     - Dreaming in Cuban: "https://storymaps.arcgis.com/stories/f82a7f09276f4dbb96b5784bfd5e479d"
     - Newes from Scotland: "https://vanessabcs.github.io/newes.html"
-  Publications: "https://vanessabcs.github.io/"
+  Publications: "https://vanessabcs.github.io/about/publications.md"
   CV: 
   Teaching: 
 
